--- a/front/src/app/views/create-notice/create-notice.component.html
+++ b/front/src/app/views/create-notice/create-notice.component.html
@@ -37,14 +37,14 @@
             </div>
             </div>
 
-            <div>
+            <div class="formCamp">
                 <label for="">Fecha de la noticia:</label>
                 <input class="input_date" type="date" formControlName="issue_date">
 
             </div>
 
         <div class="button">
-            <button type="submit" >Crear curso</button>
+            <button type="submit" >Crear noticia</button>
         </div>
         
 
