--- a/front/src/app/views/course-view/course-view.component.html
+++ b/front/src/app/views/course-view/course-view.component.html
@@ -69,8 +69,9 @@
     </div>
 
     <div>
-        <h3>Profesor</h3>
-        <p>{{ course?.teacher_id }}</p>
+        <h3>Url de la imagen</h3>
+        <input type="text" [(ngModel)]="course!.img">
+
     </div>
 
     <div>
