--- a/front/src/app/views/courses/courses.component.css
+++ b/front/src/app/views/courses/courses.component.css
@@ -1,4 +1,13 @@
 
+html{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .courses-intro {
   
   text-align: center;
@@ -6,6 +15,9 @@
   padding: 20px;
   
   
+}
+.img{
+  height: 16rem;
 }
 .styled-divider {
   border: none;
@@ -262,11 +274,14 @@
 }
 
 /* 📌 Título del Curso */
-.course-title a {
+.course-title  {
   color: white;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 24px;
   font-weight: bold;
+  margin: 16px 0;
+
+
 }
 
 .course-title a:hover {
@@ -276,7 +291,7 @@
 /* 📌 Descripción */
 .course-description {
   font-size: 16px;
-  margin: 10px 0;
+  margin: 16px 0;
   color: #ddd;
 }
 
