--- a/front/src/app/views/profile/profile.component.css
+++ b/front/src/app/views/profile/profile.component.css
@@ -1,20 +1,35 @@
-:root {
-  /* Primary */
+/*:root {
+
   --var-soft-blue: hsl(215, 51%, 70%);
   --var-cyan: hsl(178, 100%, 50%);
-  /* Neutral */
+
   --var-main-darkest: hsl(217, 54%, 11%);
   --var-card-dark: hsl(216, 50%, 16%);
   --var-line-dark: hsl(215, 32%, 27%);
   --var-lightest: white;
 
-  /* Fonts */
+
 
   --var-heading: normal normal 600 1.5em/1.6em "Outfit", sans-serif;
 
   --var-small-heading: normal normal 400 1em/1em "Outfit", sans-serif;
 
   --var-para: normal normal 300 1em/1.55em "Outfit", sans-serif;
+}
+*/
+/*PALETA DE COLORES*/
+:root {
+  --color-violeta: #6564cc;
+  --color-azul: #00339e;
+  --color-azul-oscuro: #010163;
+  --color-naranja: #fc6a07;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Contenedor de la imagen de perfil */
@@ -29,9 +44,9 @@
 .hero-image {
   width: 120px; /* Ajusta el tamaño base */
   height: 120px;
-  border-radius: 50%; /* Hace la imagen redonda */
+ /* border-radius: 50%; /* Hace la imagen redonda */
   object-fit: cover; /* Evita distorsiones */
-  border: 3px solid #00339e; /* Agrega un borde */
+ /* border: 3px solid #00339e; /* Agrega un borde */
 }
 
 /* Tarjeta de Perfil */
@@ -56,33 +71,72 @@
 .profile-title {
   text-align: center;
   font-size: 24px;
-  color: #333;
-  margin-bottom: 15px;
+  color:  #010163;
+  margin-bottom: 16px;
   border-bottom: 2px solid #00339e;
-  padding-bottom: 10px;
+  padding-bottom: 16px;
 }
 
 /* Información del perfil */
-.profile-info p {
-  font-size: 16px;
-  color: #555;
-  margin: 10px 0;
+.icon-image{
+  width: 32px;
+  margin: 0;
+  padding: 0;
+
+}
+.borde{
+  border: 1px solid red;
+}
+.profile-info-div{
   display: flex;
+  justify-content: start  ;
   align-items: center;
+  margin: 8px 0;
+  padding: 8px;
+  outline: 1px solid  transparent;
+  border-radius: 4px;
+  transition: all .5s;
+}
+.profile-info-div-sh{
+  display: flex;
+  justify-content: start  ;
+  align-items: center;
+  margin: 8px 0;
+  padding: 8px;
+  outline: 1px solid  transparent;
+  border-radius: 4px;
+}
+
+.profile-info-div p {
+  font-size: 18px;
+  color: #000;
+  display: inline;
+  margin: 4px;
+  padding: 0;
+}
+
+.profile-info-div-sh p {
+  font-size: 18px;
+  color: #000;
+  display: inline;
+  margin: 4px;
+  padding: 0;
 }
 
 /* Iconos y texto */
-.profile-info strong {
-  width: 150px;
+.profile-info-div strong {
+  color: #010163;
+}
+
+.profile-info-div-sh strong {
   color: #010163;
 }
 
 /* Efecto al pasar el mouse sobre los datos */
-.profile-info p:hover {
-  background-color: #fc6a07;
+.profile-info-div:hover {
+  outline: 1px solid  #fc6a0780;
   border-radius: 5px;
-  padding: 5px;
-  transition: background-color 0.3s ease;
+  margin: 8px 0;
 }
 
 /* Estilos para los inputs en modo edición */
@@ -92,26 +146,11 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
+  margin: 0 8px;
 }
 
 /* Botones */
-.btn {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 6px;
-  color: #fff;
-  cursor: pointer;
-  margin-top: 15px;
-  transition: background-color 0.3s ease;
-}
 
-.btn-edit {
-  background-color: #00339e;
-}
-
-.btn-edit:hover {
-  background-color: #0056b3;
-}
 
 .btn-save {
   background-color: #00339e;
@@ -170,19 +209,23 @@
   border-radius: 5px;
 }
 
-.password-container button {
+button {
   background: #fc6a07;
   color: white;
   border: none;
-  padding: 10px;
+  padding: 12px;
+
   width: 100%;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  transition: all .5s; 
+
 }
 
-.password-container button:hover {
+button:hover {
   background: #00339e;
+
 }
 
 @media (min-width: 768px) {
