--- a/front/src/app/views/course-detail/course-detail.component.html
+++ b/front/src/app/views/course-detail/course-detail.component.html
@@ -1,22 +1,45 @@
-<div *ngIf="course; else loading" class="course-detail-card">
-    <h2 class="course-title">{{ course.name }}</h2>
-    <button (click)="enroll()" class="btn-inscribirme">Inscribirme</button>
+<main>
+  <section class="course-card-container">
 
+    <!-- Botón de volver -->
+    <a routerLink="/courses" class="btn-volver">← Volver a cursos</a>
 
-    <p class="course-subtitle">{{ course.description }}</p>
-  
-    <div class="course-section">
-      <p><strong>Categoría:</strong> {{ course.category }}</p>
-      <p><strong>Requisitos:</strong> {{ course.inscription_requeriments || 'No especificados' }}</p>
-      <p><strong>Condiciones de aprobación:</strong> {{ course.approval_conditions || 'No especificadas' }}</p>
+    <!-- Imagen del curso -->
+    <img *ngIf="course?.img" [src]="course.img" alt="{{ course.name }}" class="course-banner" />
+
+    <!-- Contenido del curso -->
+    <div *ngIf="course; else loading" class="course-card">
+      <h2 class="card-title">{{ course.name }}</h2>
+      <p class="card-description">{{ course.description }}</p>
+
+      <div class="card-info">
+        <p><strong>Descripción detallada:</strong></p>
+        <p>{{ course.long_description || 'No disponible' }}</p>
+
+        <p><strong>Categoría:</strong> {{ course.category }}</p>
+        <p><strong>Requisitos:</strong> {{ course.inscription_requeriments || 'No especificados' }}</p>
+        <p><strong>Condiciones de aprobación:</strong> {{ course.approval_conditions || 'No especificadas' }}</p>
+
+        <p><strong>Modalidad:</strong> {{ course.modality || 'No especificada' }}</p>
+        <p><strong>Nivel:</strong> {{ course.level || 'No especificado' }}</p>
+        <p><strong>Duración:</strong> {{ course.duration || 'No especificada' }}</p>
+
+        <p><strong>Fecha de inicio:</strong> {{ course.start_date | date: 'longDate' }}</p>
+        <p><strong>Fecha de fin:</strong> {{ course.end_date | date: 'longDate' }}</p>
+        <p><strong>Precio:</strong> {{ course.price | currency:'ARS':'symbol':'1.0-0' }}</p>
+        <p class="teacher-info"><strong>Profesor:</strong>{{ course.teacherName }}</p>
+       
+      </div>
+
+      
+
+      <button (click)="enroll()" class="btn-inscribirme">Inscribirme</button>
     </div>
-  
-    <div class="teacher-info">
-      Profesor: {{ course.teacherName }}
-    </div>
-  </div>
-  
-  <ng-template #loading>
-    <div class="loading">Cargando curso...</div>
-  </ng-template>
-  
+
+    <!-- Cargando -->
+    <ng-template #loading>
+      <div class="loading">Cargando curso...</div>
+    </ng-template>
+
+  </section>
+</main>
