--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -14,6 +14,41 @@
   box-sizing: border-box;
 }
 
+
+
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, var(--color-naranja) 50%, var(--color-violeta) 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: 0.5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  background-image: linear-gradient(-60deg, var(--color-azul) 50%, var(--color-azul-oscuro) 50%);
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  background-image: linear-gradient(-60deg, var(--color-naranja) 50%, var(--color-azul) 50%);
+  animation-duration: 5s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+
 /*DARK MODE*/
 .dark-mode {
   background-color: #121212;
