--- a/front/src/app/views/my-courses/my-courses.component.css
+++ b/front/src/app/views/my-courses/my-courses.component.css
@@ -104,6 +104,19 @@ Classes
   flex-direction: row;
   align-items: center;
   gap: 10px;
+  background: linear-gradient(to right, #6564CC, #00339E, #010163, #FC6A07);
+  background-size: 300% 100%;
+  animation: moveGradient 6s ease-in-out infinite alternate;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  
+}
+@keyframes moveGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 .card-container {
