--- a/front/src/app/views/not-found/not-found.component.html
+++ b/front/src/app/views/not-found/not-found.component.html
@@ -1,8 +1,16 @@
-<div class="container">
-    <marquee direction="right" class="title"><span>PAGE NOT FOUND</span></marquee>
-    <img
-      class="image"
-      src="https://media.giphy.com/media/UoeaPqYrimha6rdTFV/giphy.gif"
-      alt="giphy_404"
-    />
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Not Found</title>
+    
+</head>
+<body>
+    <div class="container">
+        <h1>404</h1>
+        <p>The server is not ready to handle the request.</p>
+        <a href="/" class="btn">Go back home</a>
+    </div>
+</body>
+</html>
