--- a/front/src/app/core/side-bar/side-bar.component.css
+++ b/front/src/app/core/side-bar/side-bar.component.css
@@ -14,7 +14,7 @@
 }
   .sidebar {
     width: 250px;
-    background-color: #00339E;
+    background-color: #6564cc;
     height: 100vh;
     padding: 20px;
     
