--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -83,12 +83,13 @@
     <section class="cursos-destacados">
       <h2>Cursos Destacados</h2>
       <div class="cursos-grid">
-        <div class="curso">🖥 Desarrollo Web</div>
-        <div class="curso">📊 Análisis de Datos</div>
-        <div class="curso">🎨 Diseño UX/UI</div>
+        <a class="curso" href="/courses-detail/1">🖥 Desarrollo Web</a>
+        <a class="curso" href="/courses-detail/9">📊 Finanzas</a>
+        <a class="curso" href="/courses-detail/2">🎨 Diseño UX/UI</a>
       </div>
     </section>
   </div>
+  
 
   <!-- Beneficios -->
   <section class="beneficios">
