--- a/front/src/app/views/courses/courses.component.html
+++ b/front/src/app/views/courses/courses.component.html
@@ -25,7 +25,7 @@
 
         <main class="main-content">
           <h1 class="course-title">{{ course.name }}</h1>
-          <p class="course-description">{{ course.description }}</p>
+          <p class="course-description">{{ course.duration }}</p>
 
           <div class="flex-row">
             <div class="course-category">
