--- a/front/src/app/views/course-view/course-view.component.html
+++ b/front/src/app/views/course-view/course-view.component.html
@@ -211,15 +211,38 @@
 </section>
 
 <!-- Sección de contenidos -->
-<section *ngIf=" !esDocente">
-    <h3>Contenidos</h3>
-    <div *ngFor="let c of contents">
-        <h4>{{ c.name }}</h4>
-        <div>
-            <a [href]="c.url" target="_blank">Ver recurso</a>
-        </div>
-        <iframe [src]="c.url" width="600" height="400"></iframe>
+<!-- Sección de contenidos -->
+<section *ngIf="!esDocente">
+  <h3>Contenidos</h3>
+  <div *ngFor="let c of contents" class="contenido-block">
+    <h4>{{ c.name }}</h4>
+
+    <!-- Recurso externo como fallback -->
+    <div style="margin-bottom: 10px;">
+      <a [href]="c.url" target="_blank">Ver recurso en nueva pestaña</a>
     </div>
+
+    <!-- Video -->
+    <div *ngIf="c.type === 'Video'">
+      <iframe
+        width="100%"
+        height="400"
+        [src]="getSanitizedLink(c.url, c.type)"
+        frameborder="0"
+        allowfullscreen>
+      </iframe>
+    </div>
+
+    <!-- PDF -->
+    <div *ngIf="c.type === 'PDF'">
+      <iframe
+        width="100%"
+        height="600"
+        [src]="getSanitizedLink(c.url, c.type)"
+        frameborder="0">
+      </iframe>
+    </div>
+  </div>
 </section>
 
 <!-- Sección para agregar contenido (solo visible para docentes) -->
