control de pagos

--- a/front/src/app/views/admin-attendance/admin-attendance.component.html
+++ b/front/src/app/views/admin-attendance/admin-attendance.component.html
@@ -1,4 +1,7 @@
 <section>
+
+    <button (click)="volverAlCurso()">Volver al curso</button>
+
     <h2 class="title">Asistencias de los alumnos</h2>
     <div class="cont" >
 
